# multi-agent

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .~lock.Multi-Agent-Platform-Dossier-Strategique.docx#  API.md  ARCHITECTURE.md  BusinessPlan_MultiAgent_2025-2027.docx  BusinessPlan_V2_Bootstrap_2025-2027.docx  CLAUDE.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_SUMMARY.md  GITHUB_MCP.md  GOOGLE_CREDENTIALS_SETUP.md  K8S_IMPLEMENTATION_SUMMARY.md  KUBERNETES.md  Makefile  Multi-Agent-Platform-Dossier-Strategique.docx  NATS_IMPLEMENTATION_GUIDE.md  NATS_IMPLEMENTATION_PLAN.md  OAUTH.md  Plateforme_Multi-Agent_Presentation.docx  QDRANT_WORKFLOW_FR.md  README.md  SECURITY.md  SUBWORKFLOW.md  Strategie_Monetisation_Multi-Agent.docx  automated_code_review_and_testing_pipeline.json  docker-compose.yml  european_cuisine_specialist_workflow.json  git_mcp.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  presentation_video.docx  prisma.config.ts  skaffold.yaml  test-resume.js  (+3 more)
.claude/: rules-index.md  settings.json
.husky/: pre-commit
docs/: analyse_strategique_plateforme_fr.md  hr-workflow-rh.md  migration-high-performance.md
services/tool-sandbox-rs/: Cargo.toml  Dockerfile  README.md  Red_Velvet_Cake_Recipe.docx  cake_recipe.docx
services/tool-sandbox-rs/src/: config.rs  db.rs  main.rs  mcp.rs
services/tool-sandbox-rs/src/api/: crud.rs  execute.rs  health.rs  mod.rs  tests.rs  wasm.rs
services/tool-sandbox-rs/src/sandbox/: mod.rs  runner.rs  wasmtime_runner.rs
services/tool-sandbox-rs/src/tools/: file.rs  git.rs  http.rs  integrations.rs  mod.rs  shell.rs
(+798 files in other folders)
